# aoc2022

./: .gitignore  CMakeLists.txt  get_input.py
d0/: main.cpp
d1/: in.txt  main.cpp
d2/: main.cpp
d3/: main.cpp
d4/: main.cpp
d5/: main.cpp
d6/: main.cpp
d7/: main.cpp
d8/: main.cpp
d9/: main.cpp
include/: aoc.hpp
scripts/: get_input.py  run.sh  setup_day.py  setup_day.sh
